Fri Jul 28 11:53:12 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/main-window.c:
	  - Fix compilation error. Add a missing variable declaration.

Fri Jul 28 01:15:13 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/preferences-page-irc.c:
	* src/fe-gnome/preferences-page-irc.h:
	* src/fe-gnome/preferences-page-colors.c:
	* src/fe-gnome/preferences-page-colors.h:
	* data/preferences-dialog.glade:
	  - Move the "show color" options from IRC to the color
	    preference page.
	  - Add a option to enable logging of conversations. (#333493)

2006-07-28  Christian Persch  <chpe@cvs.gnome.org>

	* src/fe-gnome/main-window.c: (initialize_main_window),
	(run_main_window):
	* src/fe-gnome/navigation-tree.c: (navigation_tree_init),
	(navigation_tree_create_new_network_entry),
	(navigation_tree_create_new_channel_entry), (server_context),
	(channel_context), (navigation_selection_changed):
	* src/fe-gnome/navigation-tree.h:
	- Set action sensitivity instead of messing with the proxy widgets
	directly. Bug #348968.

2006-07-28  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* src/fe-gnome/fe-gnome.c: (fe_args):
	- Use PACKAGE as gnome app ID. Bug #348868.

Thu Jul 27 21:21:54 CEST 2006  Xavier Claessens <xclaesse@gmail.com>

	* src/common/dbus/example.py:
	  - Change org.xchat. to org.xchatgnome.
	* src/common/dbus/dbus-plugin.c:
	  - Set PVERSION to "" like that the dbus plugin doesn't appear in
	    plugin list anymore.
	* configure.ac:
	  - DBus plugin depends on dbus and dbus-glib >=0.60.

Thu Jul 27 20:29:49 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/text-entry.c:
	  - Make IRC command completion case unsensitive.
	  
Thu Jul 27 18:48:31 CEST 2006  Guillaume Desmottes <cass@skynet.be>
	
	* data/preferences-dialog.glade:
	  - HIG improvements: don't display preferences window in the
	    windows list and make it transient.

2006-07-27  Christian Persch  <chpe@cvs.gnome.org>
